--- a/src/components/header/Navbar.scss
+++ b/src/components/header/Navbar.scss
@@ -6,9 +6,16 @@
   width: 100%;
   z-index: var(--z-navbar);
 
+  // TODO All of these vignettes are awful.
+  // I don't even want one, tbh.
+  // I want one on the Landing section only.
+
   // Vignette for readability
-  height: 100%;
-  box-shadow: inset 0 6rem 12rem -4rem black;
+  // height: 100%;
+  // box-shadow: inset 0 16rem 8rem -8rem #0009;
+  // background: radial-gradient(ellipse 125% 300% at 50% 300%, transparent 77%, #0008 83%);
+  height: 14rem; // 11rem;
+  background: linear-gradient(to bottom, #0009 20%, transparent);
   pointer-events: none;
 }
 
