--- a/src/components/PortfolioItem.module.scss
+++ b/src/components/PortfolioItem.module.scss
@@ -1,4 +1,5 @@
 @use 'sass:color';
+@use '../styles/font-families';
 
 $smallScreenWidth: 45rem;
 
@@ -10,28 +11,6 @@ $previewPaneShadow: .4rem;
 //   The point would be code-reuse, but... will I reuse project-link styles? I mean, really?
 
 // TODO media break should also force hamburger nav-menu; but that's handled in the Navbar component.
-
-// TODO New Typefaces
-// Nav Logo:
-//   Rubik 300
-//   Work Sans 400
-//   Montserrat 400 (Good fallback 'cause I think it's pre-installed on most machines)
-//   Cairo 300
-//   Quicksand 400
-// Portolio Title:
-//   Josefin 600 Italic
-//   Cantarell Bold
-//   Titillium Web 600
-//   Montserrat 500/600 Reg/Italic
-//   Teko 400/500 (Kinda Star Wars-y)
-//   Rubik 400 Reg/Italic (Heavier weights might be too sharp)
-//   Quicksand 500  (600 is too round/"fun")
-//   Mulish 400/600 Italic
-//   Chakra Petch 500 Reg/Italic
-//   Orbitron 500
-//   Encode Sans 500
-//   Saira Condensed 500
-//   Play 400/700
 
 .block {
   margin: 0;
@@ -119,6 +98,8 @@ $previewPaneShadow: .4rem;
   margin-left: 1rem;
   width: 100%;
 
+  font-family: font-families.get('title');
+
   display: flex;
   justify-content: center;
 }
@@ -201,16 +182,17 @@ $previewPaneShadow: .4rem;
   padding-left: .8rem;
   opacity: .5;
 
-  // TODO Diff typeface
   font-size: 1.1rem;
   letter-spacing: .2rem;
 }
 
 .technologyWord {
-  $gap: 2rem;
+  $gap: 1.5rem;
 
   display: inline-block;
   margin-right: $gap;
+
+  font-family: font-families.get('extra-detail');
 
   &::after {
     content: '/';
@@ -226,7 +208,7 @@ $previewPaneShadow: .4rem;
 }
 
 .description {
-  margin-top: 1rem;
+  margin-top: .5rem;
 }
 
 .endbar {
@@ -296,6 +278,7 @@ $previewPaneShadow: .4rem;
   border: none;
 
   color: white;
+  font-family: font-families.get('button-link');
   font-size: 1.5rem;
   font-weight: 500;
   text-decoration: none;
