--- a/src/components/header/HeaderLogo.scss
+++ b/src/components/header/HeaderLogo.scss
@@ -1,3 +1,5 @@
+@use '../../styles/font-families';
+
 :root {
   --text-primary: #ccc;
   --text-special: #DCA3D7;
@@ -33,8 +35,7 @@
 }
 
 .logo-text {
-  font-size: 2.2rem;
-  transform: translate(2.5%, -18%);
+  transform: translate(2.5%, -15%);
 
   display: flex;
   align-items: center;
@@ -65,8 +66,10 @@
 }
 
 .glitch-text-letter {
-  width: 1.5rem;
-  height: 1.7rem;
-  font-size: 1.7rem;
+  width: 1.8rem;
+
+  font-family: font-families.get('logo');
+  font-size: 1.8rem;
+  line-height: 1.5;
   color: var(--text-primary);
 }
