--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@use 'styles/font-families';
+
 html {
   scroll-behavior: smooth;
 }
@@ -7,41 +9,15 @@ html {
   box-sizing: border-box;
 }
 
-@font-face {
-  font-family: 'Nunito Sans';
-  src: url('resources/NunitoSans-Regular.ttf');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Nunito Sans';
-  src: url('resources/NunitoSans-Italic.ttf');
-  font-style: italic;
-}
-@font-face {
-  font-family: 'Nunito Sans';
-  src: url('resources/NunitoSans-Bold.ttf');
-  font-weight: bold;
-}
-@font-face {
-  font-family: 'Nunito Sans';
-  src: url('resources/NunitoSans-BoldItalic.ttf');
-  font-weight: bold;
-  font-style: italic;
-}
-
 body {
   margin: 0;
-  font-family: 'Nunito Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: font-families.get('body');
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: font-families.get('code');
 }
 
 
